✨ Dokumentasjon og Windows MSI
- Dokumentert hvordan bygge `.msi` for Windows
- Bygget og lagt til en fungerende `.msi` (committed)
- Flyttet prosjektet til eget Windows-vindu
- Bedre feilhåndtering og bugfix
- Lagt til flere knapper i GUI